hphp/hack/test/typecheck/reactive/rx_of_scope6.php
<?hh

class A {
  <<__Rx>>
  public function f(int $a): void {
    // ERROR
    $a = <<__Rx, __RxOfScope>> () ==> 1;
  }
}
